syntax = "proto3";
option go_package = "./videoExtractor";

package videoExtractor;
service VideoStreamService {
  rpc GetVideoBuffer (Request) returns (Response) {}
}

message Request {
  int32 startTime_seconds = 1;
  int32 duration_seconds = 2;
  bytes input_video = 3;
}

message Response {
  bytes output_video = 1;
}